# StudayAssistant

./: .gitignore  CLAUDE.md  PHASE_0_SUMMARY.md  README.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  752a7b89437f_materials_parse_status.py  85dd8e6f264e_coaching_session_started_at_datetime_.py  a9f3c2e1b047_coaching_summary_quiz.py  af41f839d78e_cards_reviews_datetime_and_indexes.py  b3c9f1a2d456_proof_mode_and_proof_attempts.py  d5e6f7a8b9c0_refinement_proposals.py  e68e40ed41fe_user_preferences.py  ee7ebfd3fa06_materials_uploaded_at_datetime.py
backend/app/: main.py
backend/app/api/: cards.py  coaching.py  concepts.py  courses.py  health.py  materials.py  me.py  plans.py  proof_checker.py  refinements.py  worked_examples.py
backend/app/core/: auth.py  config.py  logging.py
backend/app/db/: session.py
backend/app/services/: card_generator.py  chunker.py  coaching_prompt.py  coaching_summary.py  concept_extractor.py  embedder.py  ingest.py  (+6 more)
backend/tests/: conftest.py  test_cards_api.py  test_chunking.py  test_coaching_api.py  test_coaching_live.py  test_coaching_prompt.py  test_coaching_summary.py  test_concept_extraction.py  test_courses_api.py  test_due_query.py  test_fsrs_determinism.py  test_fsrs_review.py  test_graph.py  test_health.py  test_llm_gateway.py  test_llm_gateway_live.py  test_materials_api.py  test_me.py  test_migrations.py  test_plan_engine.py  test_proof_checker.py  test_rag_service.py  test_refinement.py  test_worked_examples.py
(+116 files in other folders)
